# LearningL1NormsWeights4Synthesis

./: .gitignore  README.md  pyproject.toml  run_tests.sh  run_trainings.sh
configs/: data.yaml  tv_lambda_map_training.yaml
data/fastMRI_splits/: fastmri_test.txt  fastmri_training.txt  fastmri_validation.txt
scripts/: test_script.py  training_script.py
src/adaptive_l1/data/: augmentation.py  data_classes.py  generate_splits.py  utils.py
src/adaptive_l1/models/: modl.py  spatially_adaptive_conv_synthesis.py  spatially_adaptive_tv.py  unet.py
src/adaptive_l1/testing/: statistics.py  tester.py
src/adaptive_l1/training/: trainer.py
