[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-l1-conv-synthesis-reg"
version = "0.1.0"
description = "MR image reconstruction code using spatially adaptive l1 norms"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
